matched naming conventions for image, changed image comment to live, updated css formatting for image

--- a/src/style.css
+++ b/src/style.css
@@ -120,7 +120,8 @@ img {
 #weatherMainImg {
   display: inline;
   margin: auto;
-  width: 75px;
+  width: 125px;
+  height: 125px;
 }
 
 .weather-forcast-day {
