--- a/src/style.css
+++ b/src/style.css
@@ -43,6 +43,14 @@ body {
   padding: 0px;
 }
 
+@media (max-width: 375px){
+  #current-location{
+    font-size: 16px;
+    color: white;
+    padding: 0;
+  }
+}
+
 .cityBlock {
   display: inline-block;
   margin: 10px 10px;
